--- a/portfolio.html
+++ b/portfolio.html
@@ -302,36 +302,46 @@
         <ul class="social-footer">
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg">
-                <use href="./images/icons.svg.svg#icon-instagram" width="20px" height="20px"></use>
+              <svg class="social footer-svg"  width="20px" height="20px">
+                <use href="./images/icons.svg.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg">
-                <use href="./images/icons.svg.svg#icon-twitter" width="20px" height="20px"></use>
+              <svg class="social footer-svg"  width="20px" height="20px">
+                <use href="./images/icons.svg.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg">
-                <use href="./images/icons.svg.svg#icon-facebook" width="20px" height="20px"></use>
+              <svg class="social footer-svg"  width="20px" height="20px">
+                <use href="./images/icons.svg.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg">
-                <use href="./images/icons.svg.svg#icon-linkedin" width="20px" height="20px"></use>
+              <svg class="social footer-svg"  width="20px" height="20px">
+                <use href="./images/icons.svg.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
+      <div class="subscription">
+        <label for="email" class="subscription-label">Подпишитесь на рассылку</label>
+        <input class="subscription-input" placeholder="E-mail" type="email" name="email" id="email">
 
+        <button class="button-modal button-submit" type="submit">Подписаться
 
+          <svg class="send-icons" width="20px" height="20px">
+            <use href="./images/icons.svg.svg#icon-send"></use>
+          </svg>
+
+        </button>
+      </div>
     </div>
   </footer>
 </body>
