DZ перевірено валідатором

--- a/index.html
+++ b/index.html
@@ -408,28 +408,28 @@
         <ul class="social-footer">
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg"  width="20px" height="20px">
+              <svg class="social footer-svg" width="20px" height="20px">
                 <use href="./images/icons.svg.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg"  width="20px" height="20px">
+              <svg class="social footer-svg" width="20px" height="20px">
                 <use href="./images/icons.svg.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg"  width="20px" height="20px">
+              <svg class="social footer-svg" width="20px" height="20px">
                 <use href="./images/icons.svg.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a href="" class="media footer-icon">
-              <svg class="social footer-svg"  width="20px" height="20px">
+              <svg class="social footer-svg" width="20px" height="20px">
                 <use href="./images/icons.svg.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -480,24 +480,24 @@
 
           <div class="form-field">
             <label for="email" class="form-label">Почта</label>
-            <input type="email" class="form-input" name="email" id="email">
+            <input type="email" class="form-input" name="email" id="email-form">
             <svg class="icons-form" width="18px" height="18px">
               <use href="./images/icons.svg.svg#icon-email"></use>
             </svg>
           </div>
           <div class="form-field">
             <label for="comment">Комментарий</label>
-            <textarea name="comment" id="comment" cols="100%" rows="" placeholder="Введите текст"></textarea>
+            <textarea name="comment" id="comment" cols="100" placeholder="Введите текст"></textarea>
           </div>
           <div class="checkbox-conditions">
-          <input class="checkbox" type="checkbox" value="conditions" name="" id="conditions">
-          
+            <input class="checkbox" type="checkbox" value="conditions" name="checkbox" id="conditions">
+
             <label for="conditions" class="tex-conditions">Соглашаюсь с рассылкой и принимаю
-               <a href="" class="treaty-conditions">Условия договора</a>
-              </label> 
-            </div>
-             
-              <div class="butt"> <button type="submit" class="button-modal">Отправить</button></div>
+              <a href="" class="treaty-conditions">Условия договора</a>
+            </label>
+          </div>
+
+          <div class="butt"> <button type="submit" class="button-modal">Отправить</button></div>
 
         </form>
       </div>
